# stripe-core

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
src/eldercrank/stripe/core/: __init__.py  handler.py  manager.py  models.py
src/eldercrank_stripe_core/: __init__.py
tests/: test_core.py
