[project]
name = "eldercrank-stripe-core"
dynamic = ["version"]
description = "A no-nonsense Stripe integration by a grumpy dev."
readme = "README.md"
authors = [
    { name = "Shawn", email = "shawn@shawngrover.ca" }
]
maintainers = [
    { name = "Shawn", email = "shawn@shawngrover.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "stripe>=14.3.0",
]
license = {text = "MIT"}
keywords = [
    "stripe",
    "payment-processing",
    "api-wrapper",
    "webhooks",
    "fastapi",
    "flask",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/eldercrank/eldercrank-stripe-core"
Documentation = "https://github.com/eldercrank/eldercrank-stripe-core#readme"
Repository = "https://github.com/eldercrank/eldercrank-stripe-core.git"
Changelog = "https://github.com/eldercrank/eldercrank-stripe-core/releases"
Issues = "https://github.com/eldercrank/eldercrank-stripe-core/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/eldercrank"]

[tool.hatch.build.targets.sdist]
include = ["src", "LICENSE", "README.md", "CONTRIBUTING.md", "SECURITY.md"]

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
